--- a/Db/P001_Connection/P001_Connection.csproj
+++ b/Db/P001_Connection/P001_Connection.csproj
@@ -67,7 +67,14 @@
     <Compile Include="Form3.designer.cs">
       <DependentUpon>Form3.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model\Manager\CountryManager.cs" />
+    <Compile Include="Form4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form4.Designer.cs">
+      <DependentUpon>Form4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Manager\Interface\ISelectU.cs" />
+    <Compile Include="Model\Manager\Manager.cs" />
     <Compile Include="Model\Manager\Interface\IDelete.cs" />
     <Compile Include="Model\Manager\Interface\IDeleteC.cs" />
     <Compile Include="Model\Manager\Interface\IDeleteP.cs" />
@@ -83,9 +90,11 @@
     <Compile Include="Model\Record\BaseRecord.cs" />
     <Compile Include="Model\Record\BaseRecordC.cs" />
     <Compile Include="Model\Record\BaseRecordP.cs" />
+    <Compile Include="Model\Record\BaseRecordU.cs" />
     <Compile Include="Model\Record\Csapat.cs" />
     <Compile Include="Model\Record\Focista.cs" />
     <Compile Include="Model\Record\Poszt.cs" />
+    <Compile Include="Model\Record\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -96,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form3.resx">
       <DependentUpon>Form3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form4.resx">
+      <DependentUpon>Form4.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
